# nova3r-a3s

./: .gitignore  NOTICES  README.md  demo_nova3r.py  pyproject.toml  requirements.txt
demo/examples/: scrream_scene09.ply
demo/visualization/: render_points.py
dust3r/datasets/: __init__.py  scrream.py  scrream_lari_multi_view.py
dust3r/datasets/base/: base_stereo_view_dataset.py  batched_sampler.py
dust3r/datasets/utils/: cropping.py  transforms.py
nova3r/: __init__.py  inference.py  io.py  model.py  render.py
nova3r.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nova3r/_legacy/: __init__.py  inference.py  io.py  render_points.py
nova3r/_vendor/croco/models/: blocks.py
nova3r/heads/pts3d_decoder/: flowm_decoder_point_joint_v2.py
nova3r/heads/pts3d_encoder/: transformer_encoder.py
nova3r/heads/triposg_model/: autoencoder_kl_triposg.py
nova3r/layers/: drop_path.py  layer_scale.py  mlp.py  patch_embed.py  rope.py  swiglu_ffn.py  vision_transformer.py
nova3r/models/: __init__.py  model_wrapper.py  nova3r_img_cond.py  nova3r_pts_cond.py
nova3r/modules/: __init__.py  aggregator_pts3d.py  nova3r_img_cond.py  nova3r_pts_cond.py
nova3r/scripts/: download_checkpoints.py  render.py
nova3r/utils/: device.py  geometry.py  image.py  image_pairs.py  sampling.py
scripts/: download_checkpoints.sh  setup.sh
tests/: conftest.py  test_inference.py  test_io.py  test_model.py
